--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 h1
 {
     background: red;
+    text-shadow:green 2px 3px 4px
 }
 
 .par-1
@@ -8,6 +9,7 @@ h1
     color: orange;
     font-family: Arial;
     font-weight: bold;
+    text-shadow:green 2px 3px 4px
 }
 
 .par-2
@@ -17,4 +19,12 @@ h1
     border-radius: 25px
     margin-bottom: 60 px
     padding-left: 20 px;
+    text-shadow:green 2px 3px 4px
 }
+
+.par-3
+ {
+    font-size:24;
+    font-style:italic;
+    text-shadow:green 2px 3px 4px
+ }
